--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,15 +13,21 @@ environment:
     CMAKE_BUILD_PARALLEL_LEVEL: 2
   matrix:
     - BUILD_TYPE: Release
-    - BUILD_TYPE: Debug
+    # - BUILD_TYPE: Debug
 
 install:
+  # Linux: install multilib compilers
+  - sh: |
+      sudo apt-get -qq update
+      sudo apt-get -qq -y install \
+          cmake gcc-11 g++-11 \
+          gcc-11-multilib g++-11-multilib \
+          lib32gcc-11-dev lib32stdc++6
+      echo "g++ version: $(g++ --version | head -n1)"
   # initialize all submodules
   - git submodule update --init --recursive
-  # Linux: install multilib compilers
-  - sh: sudo apt-get -qq update
-  - sh: sudo apt-get -qq -y install cmake g++-multilib gcc-multilib
-  - sh: "echo g++ version: $(g++ --version | cut -d$'\n' -f1)"
+  # apply patches
+  - sh: (cd lib/cpp_redis && git apply ../../patches/fix-missing-thread-include.patch)
   # set CMake platform arg on MSVC
   - ps: |
       if ($isWindows) {
@@ -32,8 +38,14 @@ install:
 
 build_script:
   - cmd: mkdir build
-  - ps: cmake -Wno-dev -DCMAKE_BUILD_TYPE="$env:BUILD_TYPE" @CMAKE_ARGS -S . -B build
-  - ps: cmake --build build --config $env:BUILD_TYPE
+  - sh: >
+      cmake -Wno-dev
+      -S .
+      -B build
+      -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+      -DCMAKE_C_FLAGS=-m32
+      -DCMAKE_CXX_FLAGS=-m32
+  - sh: cmake --build build --config ${BUILD_TYPE}
 
 artifacts:
   - path: 'build/plugins/*'
